# ScreenCapture

./: CMakeLists.txt  main.cpp  screen_capture.cpp  screen_capture.h
